Core: Java17 syntax migration (#1924)
* Add java17 support

* Ci updates

* Bump Groovy version

* Replace `.collect(Collectors.toList())` with java17 `.toList()`

* Use switch expressions

* Use text blocks

* Use pattern matching

* Use records

* Remove preview version.

* Revert "Use records"

This reverts commit 86562eeae5366a98b386848d1755fb8d09543400.

* Remove redundant `final` modifier when define variable with `instanceof` pattern matching.

* Remove changes regarding unnecessary parentheses. Update checkstyle.

* Use switch expressions.

* Suppress `MissingSwitchDefault` violation.

* Remove unnecessary switch default branch.

* Add text blocks.

* Replace `String.format` with `.formatted`.

* Resolve conversations.

* Resolve conversations.

Co-authored-by: Serhii Nahornyi <snahornyi@rubiconproject.com>
Co-authored-by: Oleksandr Zhevedenko <net.burst.mail@gmail.com>
Co-authored-by: Dubyk Danylo <pointbay2001@gmail.com>