@@ -6,7 +6,6 @@ import org.prebid.server.deals.targeting.model.LookupResult;
 import org.prebid.server.deals.targeting.syntax.TargetingCategory;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @EqualsAndHashCode(callSuper = true)
 public class IntersectsStrings extends Intersects<String> {
@@ -20,10 +19,10 @@ public class IntersectsStrings extends Intersects<String> {
         return LookupResult.of(
                 context.lookupStrings(category).getValues().stream()
                         .map(IntersectsStrings::toLowerCase)
-                        .collect(Collectors.toList()));
+                        .toList());
     }
 
     private static List<String> toLowerCase(List<String> values) {
-        return values.stream().map(String::toLowerCase).collect(Collectors.toList());
+        return values.stream().map(String::toLowerCase).toList();
     }
 }
